styles.css
html {
    font-family: Arial, sans-serif;
    background-color: #010b35bb;
    color: #9F9F9F;
    margin: 0;
    padding: 0;
    font-size: 16px;
}

body {
    margin: 0;
    padding: 20px;
}

header {
    display: flex;
    justify-content: space-around;
    margin-bottom: 40px;
}

#self {
    height: 500px;
    border-radius: 10px;
    box-shadow: 3px 3px #f0f0f0;
}

h1 {
    color: #FFFFFF;
    font-size: 4rem;
    margin: 0px auto;
}

h2 {
    font-size: 3rem;
}

.about {
    max-width: 700px;
    text-align: justify;
}

main {
    display: flex;
    flex-direction: column;
}

.projects {
    background-color: #555a6d;
}

#projects-container {
    display: flex;
    height: 600px;
    margin-left: 20px;
}

.details-window {
    flex: 2;
    border: 1px solid #3a3d49;
    border-radius: 10px;
    box-shadow: 3px 3px #f0f0f0;
    margin: 0 20px 20px 20px;
    padding: 10px;
    overflow: auto;
}

.details-window img {
    height: 300px;
    display: block;
    margin: 0 auto;
}

nav {
    flex: 3;
    display: flex;
    flex-direction: column;
}

.project-row {
    display: flex;
    gap: 20px;
}

.project-img {
    height: 150px;
    display: block;
}

#project-title {
    text-align: center;
}

#contact {
    background-color: #8f9ac4;
    color: #232736;
    height: 200px;
}

#contact p {
    margin: 10px;
}

